--- a/Game-Tiranossauro-Google/index.html
+++ b/Game-Tiranossauro-Google/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Game Rex</title>
-    <link rel="stylesheet" href="style.css"></link>
-    <script src="script.js" charset="UTF-8" defer></script>
+    <link rel="stylesheet" href="./src/style.css"></link>
+    <script src="./src/script.js" charset="UTF-8" defer></script>
 </head>
 <body>
     <div class="background">
